--- a/webjs/src/main/webapp/index.html
+++ b/webjs/src/main/webapp/index.html
@@ -2,40 +2,58 @@
     <head>
         <meta charset="UTF-8">
         <script type="text/javascript" src="views/js/getJSON.js"></script>
+        <script type="text/javascript">
+            function deleteUser(idUser){
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST","/users?type=1&id="+idUser, true);
+                xhr.send();
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState == 4 && xhr.status == 200) {
+                        console.log('responseText:' + xhr.responseText);
+                        createUsersTable();
+                    }
+                };
+            }
+            function createUsersTable(){
+                ajax_get('/users', function(data) {
+                    if(data.length<=0){
+                        document.getElementById("users").innerHTML = "<p>Users don't existed</p>";
+                        return;
+                    }
+                    var html= "<table  border=\"1\">";
+                        html+="<tr>";
+                            html+="<th>ID</th>";
+                            html+="<th>Имя</th>";
+                            html+="<th>Номер</th>";
+                            html+="<th>Логин</th>";
+                            html+="<th>Друзья</th>";
+                            html+="<th>Операции</th>";
+                        html+="</tr>";
+                        var size = data.length;
+                        for (var i=0;i!=size;++i) {
+                            html += "<tr>"+
+                            "<td>"+data[i].id+"</td>"+
+                            "<td>"+data[i].name+"</td>"+
+                            "<td>"+data[i].number+"</td>"+
+                            "<td>"+data[i].email+"</td>"+
+                            "<td>"+"<a href=\"views/view_friends.html?id="+data[i].id+"\"> Друзья пользователя</a>"+"</td>"+
+                            "<td>"+
+                                "<input type=\"button\" value=\"Удалить\" onclick=\"deleteUser("+data[i].id+")\">"+
+                            +"</td>"+
+                            "</tr>"
+                        }
+                    html+="</table>";
+                    document.getElementById("users").innerHTML=html;
+                });
+            };
+        </script>
     </head>
     <body>
         <label>Users</label>
         <div id="users"></div>
         <script type="text/javascript">
-            ajax_get('/users', function(data) {
-                if(data.length<=0){
-                    document.getElementById("users").innerHTML = "<p>Users don't existed</p>";
-                    return;
-                }
-                var html= "<table  border=\"1\">";
-                    html+="<tr>";
-                        html+="<th>ID</th>";
-                        html+="<th>Имя</th>";
-                        html+="<th>Номер</th>";
-                        html+="<th>Логин</th>";
-                        html+="<th>Друзья</th>";
-                        html+="<th>Операции</th>";
-                    html+="</tr>";
-                    var size = data.length;
-                    for (var i=0;i!=size;++i) {
-                        html += "<tr>"+
-                        "<td>"+data[i].id+"</td>"+
-                        "<td>"+data[i].name+"</td>"+
-                        "<td>"+data[i].number+"</td>"+
-                        "<td>"+data[i].email+"</td>"+
-                        "<td>"+"<a href=\"views/view_friends.html?id="+data[i].id+"\"> Друзья пользователя</a>"+"</td>"+
-                        "<td>"+"<input href=\"/users?"+"type=1&"+"id="+data[i].id+"\">Удалить</a>"+"</td>"+
-                        "<td>"+"<a href=\"/users?"+"type=1&"+"id="+data[i].id+"\">Удалить</a>"+"</td>"+
-                        "</tr>"
-                    }
-                html+="</table>";
-                document.getElementById("users").innerHTML=html;
-            });
+            createUsersTable();
         </script>
         <a href="views/create_user.html">Добавить пользователя</a>
     </body>
