--- a/webjs/src/main/webapp/index.html
+++ b/webjs/src/main/webapp/index.html
@@ -1,19 +1,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="Pragma" content="no-cache" >
         <script type="text/javascript" src="views/js/getJSON.js"></script>
+        <script type="text/javascript" src="views/js/postJSON.js"></script>
         <script type="text/javascript">
             function deleteUser(idUser){
-                var xhr = new XMLHttpRequest();
-                xhr.open("POST","/users?type=1&id="+idUser, true);
-                xhr.send();
-
-                xhr.onreadystatechange = function() {
-                    if (xhr.readyState == 4 && xhr.status == 200) {
-                        console.log('responseText:' + xhr.responseText);
-                        createUsersTable();
-                    }
-                };
+                sendJSON("/users?type=1&id="+idUser,"",function(response){
+                    createUsersTable();
+                });
             }
             function createUsersTable(){
                 ajax_get('/users', function(data) {
@@ -39,7 +34,7 @@
                             "<td>"+data[i].email+"</td>"+
                             "<td>"+"<a href=\"views/view_friends.html?id="+data[i].id+"\"> Друзья пользователя</a>"+"</td>"+
                             "<td>"+
-                                "<input type=\"button\" value=\"Удалить\" onclick=\"deleteUser("+data[i].id+")\">"+
+                                "<a href=\"javascript:deleteUser("+data[i].id+")\">"+"Удалить"+"</a>"
                             +"</td>"+
                             "</tr>"
                         }
