Style of views is configured

--- a/webjs/src/main/webapp/index.html
+++ b/webjs/src/main/webapp/index.html
@@ -1,7 +1,8 @@
 <html>
-    <head>
+    <link>
         <meta charset="UTF-8">
         <meta http-equiv="Pragma" content="no-cache" >
+        <link rel="stylesheet" href="views/css/main_style.css">
         <script type="text/javascript" src="views/js/getJSON.js"></script>
         <script type="text/javascript" src="views/js/postJSON.js"></script>
         <script type="text/javascript">
@@ -21,11 +22,11 @@
                     var html= "<table  border=\"1\">";
                         html+="<tr>";
                             html+="<th>ID</th>";
-                            html+="<th>Имя</th>";
-                            html+="<th>Номер</th>";
-                            html+="<th>Логин</th>";
-                            html+="<th>Друзья</th>";
-                            html+="<th>Операции</th>";
+                            html+="<th >Имя</th>";
+                            html+="<th >Номер</th>";
+                            html+="<th >Логин</th>";
+                            html+="<th >Друзья</th>";
+                            html+="<th >Операции</th>";
                         html+="</tr>";
                         var size = data.length;
                         for (var i=0;i!=size;++i) {
@@ -47,11 +48,13 @@
         </script>
     </head>
     <body>
-        <label>Users</label>
-        <div id="users"></div>
+        <div class="center">
+            <h1>Пользователи</h1>
+            <div class="inner" id="users"></div>
+            <input type="button" onclick="javascript:document.location='views/create_user.html'" value="Создать пользователя">
+        </div>
         <script type="text/javascript">
             createUsersTable();
         </script>
-        <a href="views/create_user.html">Добавить пользователя</a>
     </body>
 </html>
